versions/v4.2.0/doxygen/html/functions_o.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/functions_o.html
original_path: doxygen/html/functions_o.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all struct and union fields with links to the structures/unions they belong to:

### - o -

- oacp : [bt\_ots\_feat](structbt__ots__feat.md#a714abba341b1f4a50edfa73dd5048f28)
- oacp\_handle : [bt\_ots\_client](structbt__ots__client.md#ad56aaee2630d75a1bb5faf0f56486c0a)
- oacp\_sub\_disc\_params : [bt\_ots\_client](structbt__ots__client.md#a8913d240d90b77ea72612ddbf816f528)
- oacp\_sub\_params : [bt\_ots\_client](structbt__ots__client.md#a98a75a8ed52a2b97be1ea273a21b8775)
- obj : [k\_poll\_event](structk__poll__event.md#aeaf67f9bc91d59fb2939e1469a088f2d)
- obj\_cal\_checksum : [bt\_ots\_cb](structbt__ots__cb.md#a2ef2245c017015b81c0f276f00fd6f79)
- obj\_checksum\_calculated : [bt\_ots\_client\_cb](structbt__ots__client__cb.md#ad5537da9ced98a15620a7fb1e77b0218)
- obj\_core\_offset : [k\_obj\_type](structk__obj__type.md#a39824fdc4dd042e1742c4d966b068a61)
- obj\_created : [bt\_ots\_cb](structbt__ots__cb.md#a0c95b2bc382474be3c1ae849936a8206)
- obj\_created\_handle : [bt\_ots\_client](structbt__ots__client.md#aff756cfa5f9431ed288563a95877cb53)
- obj\_data\_read : [bt\_ots\_client\_cb](structbt__ots__client__cb.md#ae95f3b85758c04279ada801c001086bc)
- obj\_data\_written : [bt\_ots\_client\_cb](structbt__ots__client__cb.md#a2baaf13c8de4ade034f2b58896225e0d)
- obj\_deleted : [bt\_ots\_cb](structbt__ots__cb.md#a2fd78b43691e83c1faa86c1748ab2359)
- obj\_id : [lwm2m\_obj\_path](structlwm2m__obj__path.md#ad1cf2b4f67b059e92853a05e2d070bb7), [lwm2m\_objlnk](structlwm2m__objlnk.md#a67193c8612b3a3d2a6a9685f7d1a0053)
- obj\_id\_handle : [bt\_ots\_client](structbt__ots__client.md#a6ff62fb7570269358888c9ab865a5ec6)
- obj\_inst : [lwm2m\_objlnk](structlwm2m__objlnk.md#aa51649798b00bc0bb9887c9739b83d27)
- obj\_inst\_id : [lwm2m\_obj\_path](structlwm2m__obj__path.md#a7ae1a626b6f4b4c9cdc3e1a99d644ff2)
- obj\_metadata\_read : [bt\_ots\_client\_cb](structbt__ots__client__cb.md#ab6c03b98fc5c68aa8c76ada23b7dff1c)
- obj\_modified\_handle : [bt\_ots\_client](structbt__ots__client.md#a83cf53f6f7737620ea39dccbebe26dd4)
- obj\_name\_handle : [bt\_ots\_client](structbt__ots__client.md#ae902c29051540141852869dd94edf7e0)
- obj\_name\_written : [bt\_ots\_cb](structbt__ots__cb.md#a600fa13a97f39e3bd53c524039e2733c)
- obj\_properties\_handle : [bt\_ots\_client](structbt__ots__client.md#aabd4a625a341b4f7bdcdcff03e7ae76f)
- obj\_read : [bt\_ots\_cb](structbt__ots__cb.md#ab67ca0032b8b2fd9b8fbe6c117c186dd)
- obj\_selected : [bt\_ots\_cb](structbt__ots__cb.md#ae8602aef0fd001d6768dc20c8873742d), [bt\_ots\_client\_cb](structbt__ots__client__cb.md#ace98d27220e394b0990a8274bbd43026)
- obj\_size\_handle : [bt\_ots\_client](structbt__ots__client.md#a83c5d653692dc3d7dbcfd5c8e2361f96)
- obj\_type\_handle : [bt\_ots\_client](structbt__ots__client.md#ae2eebd727fd908ef2b2074c9c0b2ab4f)
- obj\_write : [bt\_ots\_cb](structbt__ots__cb.md#ae31da190c9c6bee086e4d7f8fcd6fbb5)
- object : [json\_obj\_descr](structjson__obj__descr.md#a5d5df7aab020feb3eeb59a7f6089b066)
- object\_pos : [pd\_rdo](unionpd__rdo.md#aff1b20a6e4905ac714ab5e7af7ff9593)
- objects : [k\_object\_assignment](structk__object__assignment.md#ad034fa126915ad604f1edc3b0a177d5a)
- obs : [zbus\_observer\_node](structzbus__observer__node.md#a9d9c6843db5c9bab9a8354929f769c75)
- obscure : [shell\_backend\_config\_flags](structshell__backend__config__flags.md#af794ac9c19b948ed733024a2db5b8bbd)
- observe\_cb : [lwm2m\_ctx](structlwm2m__ctx.md#a412bd706adcd17ec8c00f1779012a845)
- observer : [net\_event\_coap\_observer](structnet__event__coap__observer.md#af15a9f085271fdc5e88180980013bfd2)
- observers : [coap\_resource](structcoap__resource.md#a5035dc9c88c2b0ae557608e34ec14433), [zbus\_channel\_data](structzbus__channel__data.md#aeffcb35769775ee0927c3af9be77d1e1)
- observers\_end\_idx : [zbus\_channel\_data](structzbus__channel__data.md#a5b3c38f70cd99cc7e83f9b641997e1ed)
- observers\_start\_idx : [zbus\_channel\_data](structzbus__channel__data.md#a6329a0af467d83ad488f3310c1002c41)
- ocr : [can\_sja1000\_config](structcan__sja1000__config.md#a7949f91e0d855d701771ff4f59669b42), [sd\_card](structsd__card.md#a856e7ea75577c62be17dc5d8c99908f4)
- octets : [gptp\_flags](structgptp__flags.md#a90b2862e78ece1b9b7f5109f5cd5f0fd)
- od\_status : [bt\_mesh\_od\_priv\_proxy\_cli](structbt__mesh__od__priv__proxy__cli.md#aebd18bb98ded2e5dc3fca3fe121f3bc6)
- odd : [udc\_ep\_stat](structudc__ep__stat.md#a0a437fb1e4b9a79eea7e4c6b0316c450)
- off : [clock\_control\_driver\_api](structclock__control__driver__api.md#a92385c0e0c7bbf8fe955ad2281b7ccc3), [fpga\_driver\_api](structfpga__driver__api.md#a89de57caf9882098e9c5f42f35bff2a3), [gpio\_tle9104\_channel\_diagnostics](structgpio__tle9104__channel__diagnostics.md#adbc7944242d212933d510881541f9d66), [http\_parser\_url](structhttp__parser__url.md#a6510826f3aa9a1100ac5f714323edeb1), [img\_mgmt\_state](structimg__mgmt__state.md#a965b6426ea57beac531af3bb9d2f0d0e), [img\_mgmt\_upload\_req](structimg__mgmt__upload__req.md#ae9c67210faa7dfc55a73f66defc00195), [led\_driver\_api](structled__driver__api.md#a19ad736a130da2aff6bd5b299d8c33a7)
- off\_color : [osdp\_cmd\_led\_params](structosdp__cmd__led__params.md#ac6f1c1269697fcab96b6f68d62381ded)
- off\_count : [osdp\_cmd\_buzzer](structosdp__cmd__buzzer.md#ac83cdb57418fc28f11c686e79e811492), [osdp\_cmd\_led\_params](structosdp__cmd__led__params.md#a278ff380c2ab7d9c83b55aa49b3137cb)
- offset : [bt\_cap\_commander\_change\_volume\_offset\_member\_param](structbt__cap__commander__change__volume__offset__member__param.md#a7d9e94cd9eb79f1f7a14c8b9bb84e5a8), [bt\_gatt\_read\_params](structbt__gatt__read__params.md#a27f685a45c405bb2784fe369513724ad), [bt\_gatt\_write\_params](structbt__gatt__write__params.md#add53cc08465d28f33bc48a1e8649ac1a), [bt\_hci\_rp\_le\_read\_iso\_tx\_sync](structbt__hci__rp__le__read__iso__tx__sync.md#a29770c3172d5e45409392aa8ffc835ef), [bt\_iso\_biginfo](structbt__iso__biginfo.md#a4efb91dc2f249e41c65cd0dcbfe45bad), [bt\_iso\_tx\_info](structbt__iso__tx__info.md#a0cff6aa2893fdc11160e4327afebed13), [bt\_mesh\_blob\_block](structbt__mesh__blob__block.md#a7521b8121a2a1f280d14e9e222b7d6cf), [bt\_mesh\_blob\_chunk](structbt__mesh__blob__chunk.md#aabd55d7c8acf726cbc3470af55cb6bc5), [bt\_mesh\_blob\_io\_flash](structbt__mesh__blob__io__flash.md#ac4eb40a7e53adce60c2fcd11eb0b6b57), [bt\_mesh\_large\_comp\_data\_rsp](structbt__mesh__large__comp__data__rsp.md#a8bba19b3687a67442e91873c228be361), [bt\_vocs\_register\_param](structbt__vocs__register__param.md#ac1c2475cd390f5acf840f92ea45c6d31), [coap\_packet](structcoap__packet.md#a46c0842c785b8de5eb8564950a786c02), [coredump\_cmd\_copy\_arg](structcoredump__cmd__copy__arg.md#a724583bd7203d16cc46f06698acfc6ef), [far\_ptr](structfar__ptr.md#a348a66049c5a1cf56e86743c03ce568b), [img\_gr\_upload](structimg__gr__upload.md#a71736f17ef73d50d0e61049d356e2ce2), [json\_obj\_descr](structjson__obj__descr.md#a8c6f3eae5e678b8b8ef1957c46f488f1), [log\_output\_control\_block](structlog__output__control__block.md#a41fd93873fa26167a8272863c5b2d8ac), [net\_buf\_simple\_state](structnet__buf__simple__state.md#a4061f8e50e14289b1ec999ef490c8fbf), [nvs\_fs](structnvs__fs.md#a793b43b069d5e7a42963d84423ab5717), [pfc\_drive\_reg\_field](structpfc__drive__reg__field.md#a8cfedc171cbedd9c8dd24930e800c2c1), [stream\_flash\_ctx](structstream__flash__ctx.md#a66596293929b734b3132cc0a02674e3f), [uart\_event\_rx](structuart__event__rx.md#aa483e719298c30b9f5e6c57d3d161281), [zms\_ate](structzms__ate.md#a7d623901562467778185ef61b3f9bb0f), [zms\_fs](structzms__fs.md#af2dfcc5d0e8eabc5f116e2964668b05f)
- offset\_col : [osdp\_cmd\_text](structosdp__cmd__text.md#a5e7b4c03b1649d8edbf53932ee90f7b3)
- offset\_hi : [segment\_descriptor](structsegment__descriptor.md#a86d61b5de39020e207f567a5909aeaba)
- offset\_low : [segment\_descriptor](structsegment__descriptor.md#aacf357093163d9cb7c29de2cd4d74af1)
- offset\_mode : [comp\_mcux\_acmp\_mode\_config](structcomp__mcux__acmp__mode__config.md#ada67419325548375d8614b12381a5a53)
- offset\_row : [osdp\_cmd\_text](structosdp__cmd__text.md#a16f11f35eacb2876b09d148349b7ed3c)
- ok : [img\_mgmt\_state\_slot\_encode](structimg__mgmt__state__slot__encode.md#a9279018722b20380da6e48046787d220), [rtio\_sqe](structrtio__sqe.md#a45d8aad94aa1dac80c90cf7c0266bcd8)
- olcp : [bt\_ots\_feat](structbt__ots__feat.md#a309b3e38a0f15c49c06a5ffeb873cef3)
- olcp\_handle : [bt\_ots\_client](structbt__ots__client.md#aa98ae5a468c46f1ffbfd08a6e82f420d)
- olcp\_sub\_disc\_params : [bt\_ots\_client](structbt__ots__client.md#acbee05e7b1cd5c325a6982c6b32a732d)
- olcp\_sub\_params : [bt\_ots\_client](structbt__ots__client.md#a787b4851389e5da47a93969db6b3edcf)
- on : [clock\_control\_driver\_api](structclock__control__driver__api.md#a3b267856bdde2be0e679a9d1b16b3b4f), [fpga\_driver\_api](structfpga__driver__api.md#a0dedc3ce6e6ac23b9907af1ebbddaa56), [gpio\_tle9104\_channel\_diagnostics](structgpio__tle9104__channel__diagnostics.md#a85b90c4dbf15bfbefb6646de10b6c634), [led\_driver\_api](structled__driver__api.md#a9ce7322282f8c525256d3c16a514ecc4)
- on\_body : [http\_parser\_settings](structhttp__parser__settings.md#aaa145d7c24c91f471b2079ecb6368ae4)
- on\_chunk\_complete : [http\_parser\_settings](structhttp__parser__settings.md#ac1c8453573094795ef41d4ba26e78846)
- on\_chunk\_header : [http\_parser\_settings](structhttp__parser__settings.md#a497cf8f9d68e06e54684b71ee0f9f828)
- on\_color : [osdp\_cmd\_led\_params](structosdp__cmd__led__params.md#a80b47a4c55494d7062c4a83fd81b0910)
- on\_count : [osdp\_cmd\_buzzer](structosdp__cmd__buzzer.md#a9082cf0dd2e3e9d31d95051f2952d611), [osdp\_cmd\_led\_params](structosdp__cmd__led__params.md#adde9dfdd167d9dfc122b56cf5e47b10f)
- on\_data\_event : [sensing\_callback\_list](structsensing__callback__list.md#a7d0d7c878e338f19fd48c66cda9d04fc)
- on\_header\_field : [http\_parser\_settings](structhttp__parser__settings.md#acfb3fd7947c5ff3e16649c71aa13bff2)
- on\_header\_value : [http\_parser\_settings](structhttp__parser__settings.md#a2af4e9085fa79ee52b31e626179bc561)
- on\_headers\_complete : [http\_parser\_settings](structhttp__parser__settings.md#a743b24c8f33e0f1cf60a96c824c42071)
- on\_idle : [hid\_ops](structhid__ops.md#a1acc7f77f6896d2925e63402f1b9ffdd)
- on\_message\_begin : [http\_parser\_settings](structhttp__parser__settings.md#ac44144daecc8e8adbd477b7e6a794e26)
- on\_message\_complete : [http\_parser\_settings](structhttp__parser__settings.md#afdd5beef93a4a7b32bc61ae088da64d2)
- on\_status : [http\_parser\_settings](structhttp__parser__settings.md#a6d0f0203f3461a8889ad471de119c993)
- on\_url : [http\_parser\_settings](structhttp__parser__settings.md#a9c24dfa900b49bf3439bbfba572b42fb)
- online : [charger\_propval](unioncharger__propval.md#a8589124e6152b70b649788a8b94461ab)
- online\_notification : [charger\_propval](unioncharger__propval.md#ab9f40a6083ff2361ea4d161226cd77ad)
- oob : [bt\_mesh\_rpr\_unprov](structbt__mesh__rpr__unprov.md#a51e9bfeb3145c29644378d6ec5400e75)
- oob\_config : [bt\_conn\_oob\_info](structbt__conn__oob__info.md#a96f2cf2f20d9890b833949b2183a029c)
- oob\_data : [bt\_hci\_cp\_io\_capability\_reply](structbt__hci__cp__io__capability__reply.md#ac002ea0b276200a15d603b5ac83666e5), [bt\_hci\_evt\_io\_capa\_resp](structbt__hci__evt__io__capa__resp.md#ab12325d1536fe6a75d0a137bea301e8f)
- oob\_data\_flag : [bt\_conn\_pairing\_feat](structbt__conn__pairing__feat.md#afb03164960db62b4b4cf70d3f0134099)
- oob\_data\_request : [bt\_conn\_auth\_cb](structbt__conn__auth__cb.md#aec9f6256607ea2cd1ce1b4cdb3052b42)
- oob\_info : [bt\_mesh\_prov](structbt__mesh__prov.md#a6ed61556291f7f9d9a32062d588b8f2a)
- oob\_type : [bt\_mesh\_dev\_capabilities](structbt__mesh__dev__capabilities.md#a744703091988432baa14a84347309bcf)
- op : [bt\_hci\_cp\_le\_set\_ext\_adv\_data](structbt__hci__cp__le__set__ext__adv__data.md#ac5eaa1834f82024055923d08a3bef6b3), [bt\_hci\_cp\_le\_set\_ext\_scan\_rsp\_data](structbt__hci__cp__le__set__ext__scan__rsp__data.md#a3323a0844680b71cb8aedffa034837d7), [bt\_hci\_cp\_le\_set\_per\_adv\_data](structbt__hci__cp__le__set__per__adv__data.md#aac34596f0970c976c4ef71250d326c2c), [bt\_mesh\_dfu\_cli](structbt__mesh__dfu__cli.md#a94924c2ad2654a14b23a07ea0351ec1b), [bt\_mesh\_model](structbt__mesh__model.md#a4acc656c737cf79161414984312100b6), [bt\_mesh\_msg\_ack\_ctx](structbt__mesh__msg__ack__ctx.md#a08f50fcae687026c45d891c9381bd9c2), [mgmt\_evt\_op\_cmd\_arg](structmgmt__evt__op__cmd__arg.md#acbd58ae2efe86685df33e58450753fe1), [rtio\_sqe](structrtio__sqe.md#a1d8d3e3426e47a2c7f54d98f51acd953), [xen\_domctl\_shadow\_op](structxen__domctl__shadow__op.md#ab0035f740e2518998d4044d0071bb84c)
- op\_mode : [mspi\_cfg](structmspi__cfg.md#ab33e45d7802cf777a595d87058e8bfb5)
- opaque : [virtq\_receive\_callback\_entry](structvirtq__receive__callback__entry.md#adc164ebec52cd00cc15839b1cda4be56)
- opcode : [bt\_hci\_cmd\_hdr](structbt__hci__cmd__hdr.md#a09c63aab094ca0f39bab44708fdb83e4), [bt\_hci\_cp\_mesh](structbt__hci__cp__mesh.md#af29f0e2fd21f226143e0908c43c72a0f), [bt\_hci\_evt\_cmd\_complete](structbt__hci__evt__cmd__complete.md#a3e61d980b4fa3084d3c50ead735fb76d), [bt\_hci\_evt\_cmd\_status](structbt__hci__evt__cmd__status.md#a34002b693dc201083be4be77cfddcdb5), [bt\_hci\_rp\_mesh\_advertise](structbt__hci__rp__mesh__advertise.md#aa5a8760133b1f1554797f91a9c4cd8e3), [bt\_hci\_rp\_mesh\_advertise\_cancel](structbt__hci__rp__mesh__advertise__cancel.md#abcc6cd11403b34f04ff4e128628d7484), [bt\_hci\_rp\_mesh\_advertise\_timed](structbt__hci__rp__mesh__advertise__timed.md#a15527bfd94e49f654b15fc188aa7c83a), [bt\_hci\_rp\_mesh\_get\_opts](structbt__hci__rp__mesh__get__opts.md#a50276763a447e1942b28ef33401c3a54), [bt\_hci\_rp\_mesh\_set\_scan\_filter](structbt__hci__rp__mesh__set__scan__filter.md#a029223e5cfca25fc8b0565211734125e), [bt\_hci\_rp\_mesh\_set\_scanning](structbt__hci__rp__mesh__set__scanning.md#a88bee72d8dfb306d5f52b40789c6e0f1), [bt\_mesh\_model\_op](structbt__mesh__model__op.md#a09c18a889e08bc708b9dc623f8177e39), [mpl\_cmd](structmpl__cmd.md#a5cb29ca9e5a6b8249c69cc975b345e2f), [npcx\_ex\_ops\_uma\_in](structnpcx__ex__ops__uma__in.md#a891172574f487bcfbcbbed20cd340998), [sdhc\_command](structsdhc__command.md#a320ad415df67e1d9b4c09f95993dd17f)
- opcode\_base : [bt\_hci\_vs\_cmd](structbt__hci__vs__cmd.md#a1ca54af74a178506b954fe8e43a04895)
- open : [bt\_hci\_driver\_api](structbt__hci__driver__api.md#a5e324fbcb48110d45b3dfa3e63c149d9), [bt\_mesh\_blob\_io](structbt__mesh__blob__io.md#a4666a3fafde0ee9fdd51d27732bec6bc), [fs\_file\_system\_t](structfs__file__system__t.md#a40b11c282d3b8c30fe1e2d9cc98edd69)
- open\_instance : [ipc\_service\_backend](structipc__service__backend.md#ab8e9231fcff8f695af8ba396556af130)
- open\_session : [tee\_driver\_api](structtee__driver__api.md#acf8076d0cf2bb496d9c6143d6e5d2253)
- opendir : [fs\_file\_system\_t](structfs__file__system__t.md#a3c0e0a91fffdde30802fb5a1cdc22b60)
- openssl\_ciphers : [wifi\_eap\_cipher\_config](structwifi__eap__cipher__config.md#a14128465917447f38d3854444a9bf6e1)
- oper : [npcx\_ex\_ops\_qspi\_oper\_out](structnpcx__ex__ops__qspi__oper__out.md#aa77f1bdcc00e1f3cc7a66cc150ab5686), [wifi\_11k\_params](structwifi__11k__params.md#ae6029ed4bada41f18df0329d0da7401e), [wifi\_channel\_info](structwifi__channel__info.md#aa8ef8a71b49ead3664fff9a4d61b1ce8), [wifi\_filter\_info](structwifi__filter__info.md#aedd5e220cdde5768cb0f4aff920971cd), [wifi\_mode\_info](structwifi__mode__info.md#a57c101db8b81ab0ac5dd0a158057a64a), [wifi\_reg\_domain](structwifi__reg__domain.md#a3bbfdf1497a87bbb6b6211c7035e1002), [wifi\_wps\_config\_params](structwifi__wps__config__params.md#aa7a10889c5cd5124983b0f7242d23b7e)
- oper\_idle\_slope : [ethernet\_qav\_param](structethernet__qav__param.md#a0691f10a338d3c49a58d94a1adced477)
- oper\_state : [net\_if\_dev](structnet__if__dev.md#a30eabb2ffae082d0de81a50c510738a3)
- oper\_state\_change\_time : [net\_if\_dev](structnet__if__dev.md#ad0d5636ecb80e9c1bad90dc19918f86d)
- operating\_current : [pd\_rdo](unionpd__rdo.md#a8c11df4b75772cda511bd94e5a297128)
- operating\_power : [pd\_rdo](unionpd__rdo.md#a63dd2a9e94f3a61205b95efc0cf79f13)
- operation : [ethernet\_qbv\_param](structethernet__qbv__param.md#a8471f7eb20a72bb16fe7abb0b2bb24f7), [spi\_config](structspi__config.md#a71a02ea548e187e6511abf10fdfa4829), [wifi\_twt\_params](structwifi__twt__params.md#a6f0483861a387651c9c89ba182e064bd)
- operational\_current : [pd\_fixed\_supply\_pdo\_sink](unionpd__fixed__supply__pdo__sink.md#a2ac4005b0cf3e28ade8f508d2c6f5e20), [pd\_variable\_supply\_pdo\_sink](unionpd__variable__supply__pdo__sink.md#ad648f2400a495b37d8b9f995556419d0)
- operational\_power : [pd\_battery\_supply\_pdo\_sink](unionpd__battery__supply__pdo__sink.md#a3f1072c4ca168aaedd13257f01f410aa)
- operator) : [bt\_hfp\_hf\_cb](structbt__hfp__hf__cb.md#a187ef5f2b7e4a4d8a4963e51453aefdb)
- ops : [bt\_a2dp\_stream](structbt__a2dp__stream.md#aa51509d9f0c50118177345988ddb8fa5), [bt\_bap\_stream](structbt__bap__stream.md#a46a1f70c1a1fe4696039be14adf3c9b6), [bt\_cap\_stream](structbt__cap__stream.md#aa58c47ace3f844533ab545906ede52ba), [bt\_has\_preset\_register\_param](structbt__has__preset__register__param.md#a6e480fb6337d363353ca7ba6f716cd71), [bt\_iso\_chan](structbt__iso__chan.md#a214fe133602ac8dcfaaec7f372e12da8), [bt\_l2cap\_chan](structbt__l2cap__chan.md#a3e370744f17ca4cff200cc0a2ee1a74b), [bt\_rfcomm\_dlc](structbt__rfcomm__dlc.md#a0054c0b539b947688555b5663c585bb7), [can\_mcan\_config](structcan__mcan__config.md#aed10f9a4d2ddc0045bc6f37939973039), [cipher\_ctx](structcipher__ctx.md#ae3eb86d5be42450b761f89114723b682), [device](structdevice.md#ab6d65f3402e67afb9810a8356b915071), [disk\_info](structdisk__info.md#a329a571f988718fd4737b8974d4f7ada), [wifi\_nm\_instance](structwifi__nm__instance.md#a65e73ea84dfd64dc17f0af03477362ae)
- opt : [sensor\_stream\_trigger](structsensor__stream__trigger.md#a62ccdecf7253b1bfdff4f1d659563d76)
- opt\_len : [coap\_packet](structcoap__packet.md#acc5542ba2a69db8957155b90e75fd563)
- optional : [bt\_l2cap\_br\_endpoint](structbt__l2cap__br__endpoint.md#af64e45ea279960b3db213c9ad3e1828c), [shell\_static\_args](structshell__static__args.md#aa3aa836ed537dde38e64d2c677ace5ae)
- optional\_du : [ethernet\_lldp](structethernet__lldp.md#a732d685dd27d2be5cb6b51175b8af70f)
- optional\_headers : [http\_request](structhttp__request.md#aa29c2bcb70011c9776c959667e10bcf5), [websocket\_request](structwebsocket__request.md#a4cea74d6094325b218b6bbed4005b912)
- optional\_headers\_cb : [http\_request](structhttp__request.md#ab6fe0ec09c24302279124043e82f17ff), [websocket\_request](structwebsocket__request.md#ab7a281fff2a27a52f7ec346643f55b71)
- optional\_len : [ethernet\_lldp](structethernet__lldp.md#aabc1141bbc72a17e3884138c61bd5b0c)
- optional\_opcodes : [bt\_tbs\_client\_cb](structbt__tbs__client__cb.md#a91c61b29c16a43fd3f781fd7e0ab4618)
- options : [adc\_sequence](structadc__sequence.md#a379c6f92153dfa97439d39cbef222451), [auxdisplay\_custom\_data](structauxdisplay__custom__data.md#aa9c3b2af7c07e71e8cc5cd3eae058729), [bt\_conn\_le\_create\_param](structbt__conn__le__create__param.md#a4b1e26c0976d9c900b831c886c77b055), [bt\_conn\_le\_phy\_param](structbt__conn__le__phy__param.md#a889dae2cdc2fba43f9f1194d26c4b737), [bt\_hci\_cp\_le\_per\_adv\_create\_sync](structbt__hci__cp__le__per__adv__create__sync.md#aff300f352ec5f0fece90f88db811ef75), [bt\_le\_adv\_param](structbt__le__adv__param.md#a2a978c60153eb03697769bc72928f4ef), [bt\_le\_per\_adv\_param](structbt__le__per__adv__param.md#a9b80c2427171920f466601e7e8468814), [bt\_le\_per\_adv\_sync\_param](structbt__le__per__adv__sync__param.md#a4252f2b3b453c2f9c8fbf8c35a618ff2), [bt\_le\_per\_adv\_sync\_transfer\_param](structbt__le__per__adv__sync__transfer__param.md#a0b3ee6df1b409e64a064ffb6ac632cce), [bt\_le\_scan\_param](structbt__le__scan__param.md#ac815b05fee8ce0dd24228305b7596207), [coap\_client\_request](structcoap__client__request.md#a8c8b28facf0e0bbe267dc9b1aeb7772a), [dai\_config](structdai__config.md#ac8b2936e194421f95d03e1c595017306), [i2s\_config](structi2s__config.md#a56a9caaf8133ced8e47e3699e322fdab), [net\_context](structnet__context.md#ae3d6ad67411b3e590fe8a627437c1d07)
- ordered\_access : [bt\_csip\_set\_coordinator\_cb](structbt__csip__set__coordinator__cb.md#ae8cf52f1ace4ea1d56ec2204c59bb71c)
- originate\_call : [bt\_tbs\_cb](structbt__tbs__cb.md#a566504bee9c7334c53a23223e544855f), [bt\_tbs\_client\_cb](structbt__tbs__client__cb.md#a0bc51181f188a1249407f2e50431d9fd)
- oscrun : [mcp7940n\_rtc\_weekday](structmcp7940n__rtc__weekday.md#a93d4320e89948c63805bf4f3aef4bc47)
- otaa : [lorawan\_join\_config](structlorawan__join__config.md#a7e2db9310308b59f652d72a3d7b3f7ff)
- otc\_current\_group\_object : [bt\_mcc\_cb](structbt__mcc__cb.md#ac0e382f1117f983e7a2178fde274d460)
- otc\_current\_track\_object : [bt\_mcc\_cb](structbt__mcc__cb.md#ad13669e60992a1a407534f387efd1da8)
- otc\_icon\_object : [bt\_mcc\_cb](structbt__mcc__cb.md#a054e0cfb27c01f43d499a2c44788cb73)
- otc\_next\_track\_object : [bt\_mcc\_cb](structbt__mcc__cb.md#a52724924ab19f59cc936344ebe13d437)
- otc\_obj\_metadata : [bt\_mcc\_cb](structbt__mcc__cb.md#af1c9664a2459550af0a6ed611fd17263)
- otc\_obj\_selected : [bt\_mcc\_cb](structbt__mcc__cb.md#a17ebc9dbddd714d99b599b2a683ab771)
- otc\_parent\_group\_object : [bt\_mcc\_cb](structbt__mcc__cb.md#a872d0322ba3889f1f7d32e8966b53624)
- otc\_track\_segments\_object : [bt\_mcc\_cb](structbt__mcc__cb.md#a2c1b570ce8d83c3f20eb99807263a5cd)
- otCallback : [openthread\_state\_changed\_callback](structopenthread__state__changed__callback.md#a8bf9761ba1e70d9bfcdcda108109d52f)
- out : [arch\_esf](structarch__esf.md#a25d416d377e446b577945a71ff0cd02a), [mcp7940n\_rtc\_control](structmcp7940n__rtc__control.md#a8ed513f2c51f7cc90327c853a8783d6d), [udc\_ep\_caps](structudc__ep__caps.md#afc424ee2bb31c19451facc0b79bb73c7), [xencons\_interface](structxencons__interface.md#a3fd4897533d042e1c3f6819946d65ea2)
- out\_ack : [udc\_device\_caps](structudc__device__caps.md#a0adada5003bccfbd6df8329198639dc0)
- out\_buf : [cipher\_pkt](structcipher__pkt.md#ab95bae428d3d3c80b1b8ee6ea03a05d0), [hash\_pkt](structhash__pkt.md#ac86c2221c6ebe7c3e568c6d72b91ff43)
- out\_buf\_max : [cipher\_pkt](structcipher__pkt.md#a6e51f941334e87cc966f5a37e783d1fc)
- out\_cons : [xencons\_interface](structxencons__interface.md#a97486890daa9956e020b1cb33f192391)
- out\_len : [cipher\_pkt](structcipher__pkt.md#abc9588a5f84f9daa13ce4aec965f0a91)
- out\_prod : [xencons\_interface](structxencons__interface.md#acb6a82b3857702a16830e42fc7c498bd)
- out\_proto\_mask : [ubx\_cfg\_prt](structubx__cfg__prt.md#a1f4f3ab473e80648043b792bc4d5022f)
- outenableclr : [gpio\_cmsdk\_ahb](structgpio__cmsdk__ahb.md#a20babd83013581d8273570c5b63658b4)
- outenableset : [gpio\_cmsdk\_ahb](structgpio__cmsdk__ahb.md#ac5de9ecb2427bdf0dfc78099253ce2de)
- outgoing : [bt\_hfp\_ag\_cb](structbt__hfp__ag__cb.md#a8946de63ef24bbbc69e285abe2d141c1), [bt\_hfp\_hf\_cb](structbt__hfp__hf__cb.md#a46677dbfe7e73dcdc3b6cacb0aa9fa58)
- output : [os\_mgmt\_info\_append](structos__mgmt__info__append.md#a1fb38ad80f92519c649aab7ef258095b), [osdp\_cmd](structosdp__cmd.md#aa745b1efadce9bc41e7253b76bdf2adf), [smp\_transport\_api\_t](structsmp__transport__api__t.md#aa779d7dcea55385963a0c0054b95f9da)
- output\_actions : [bt\_mesh\_dev\_capabilities](structbt__mesh__dev__capabilities.md#a359caeaf64f45783b0c576ef8ef14975), [bt\_mesh\_prov](structbt__mesh__prov.md#a8b88959c5eef7f47591468e9c9768b7c)
- output\_buf : [ec\_host\_cmd\_handler\_args](structec__host__cmd__handler__args.md#a1ac9d891b168b4db55a1829d72362ca5)
- output\_buf\_max : [ec\_host\_cmd\_handler\_args](structec__host__cmd__handler__args.md#ab3eaef25fd80d0ac38b8d2eb9e40ebd4)
- output\_buf\_size : [ec\_host\_cmd\_handler\_args](structec__host__cmd__handler__args.md#a1a6f9a7ba7faf810f7095b4c053dd3b2)
- output\_desc : [bt\_vocs\_register\_param](structbt__vocs__register__param.md#a1f6baed09dc35b974d06f1426b671e05)
- output\_length : [os\_mgmt\_info\_append](structos__mgmt__info__append.md#acd3e277aef6b3bc69346996c073f993b)
- output\_lock : [shell\_telnet](structshell__telnet.md#aaa088d04a181344111d2675f3e22a49b), [shell\_websocket](structshell__websocket.md#aa2ba4d7ab718bb988a4adf1eebe30430)
- output\_no : [osdp\_cmd\_output](structosdp__cmd__output.md#af5e1d55c987dd82ed4959f251a811846)
- output\_number : [bt\_mesh\_prov](structbt__mesh__prov.md#af5c30f061ba8b0a713a3d54068dd68cc)
- output\_ohms : [voltage\_divider\_dt\_spec](structvoltage__divider__dt__spec.md#a8960e3614c0a3d9ddc543037a51e7a8e)
- output\_report : [hid\_device\_ops](structhid__device__ops.md#ac58785fc2a44be7c46e0c950fc09f0ac)
- output\_size : [bt\_mesh\_dev\_capabilities](structbt__mesh__dev__capabilities.md#a59c959cbd8b1a2aa4e548e7f990cf1f4), [bt\_mesh\_prov](structbt__mesh__prov.md#a4c51aa8e5887b3364d9480c92da3a0a0), [fs\_mgmt\_hash\_checksum\_group](structfs__mgmt__hash__checksum__group.md#a8f6ef7d183c6b41c067b2a8544e79e7e)
- output\_string : [bt\_mesh\_prov](structbt__mesh__prov.md#a28284efee6478637446702d7839f6b8c)
- output\_voltage : [pd\_rdo](unionpd__rdo.md#ad7a98411aad054f1161b4ce32ef3ee33)
- outstanding\_pages : [xen\_domctl\_getdomaininfo](structxen__domctl__getdomaininfo.md#a0886d0cc1989df57ca01dd5b5182b864)
- overall\_suspend\_time : [net\_stats\_pm](structnet__stats__pm.md#ab43935fcfe9efc1cd5f3e7e329996805)
- overdrive : [w1\_slave\_config](structw1__slave__config.md#ab8a2d4522505416863fed561df22d058)
- overdrive\_time : [drv2605\_rom\_data](structdrv2605__rom__data.md#a30f72132bcb2e5e028c64476b7cf6a24)
- overflowed : [jwt\_builder](structjwt__builder.md#af53cb40609f623b95ff68d3c66a387ce)
- override\_config : [bt\_hci\_op\_le\_cs\_test](structbt__hci__op__le__cs__test.md#acc2d0768b69e5f5b593e5aff71b17f20), [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#a0ac14a9e1055870ee33ef83e54c1a248)
- override\_config\_0 : [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#a802545d0c7f560166250d4ad585a7d80)
- override\_config\_2 : [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#a63e8e44842b894bee57ffdcdee4f2cd0)
- override\_config\_3 : [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#afe036f2effcb41c9a4d888592916c329)
- override\_config\_4 : [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#a40671e60cf8e1ff16e7389f6a24c9bb7)
- override\_config\_5 : [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#a9bba99348c662adad1f16194409b2ae1)
- override\_config\_6 : [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#af4f16878d530ec19294673756e7b6358)
- override\_config\_7 : [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#a9a2763c3062b2ee4d8a1d70393ed2aa2)
- override\_config\_8 : [bt\_le\_cs\_test\_param](structbt__le__cs__test__param.md#afb85cec959d8bd59b560828af14dbced)
- override\_parameters\_data : [bt\_hci\_op\_le\_cs\_test](structbt__hci__op__le__cs__test.md#a15a68fe7c98b2e242afd6eb67dd9b40a)
- override\_parameters\_length : [bt\_hci\_op\_le\_cs\_test](structbt__hci__op__le__cs__test.md#a373372a93d94e70d674c1c7b4c126734)
- overrun\_count : [net\_stats\_wifi](structnet__stats__wifi.md#ac498c9e517f2cb2eb01d251e84159e7e)
- oversampling : [adc\_dt\_spec](structadc__dt__spec.md#aa7daf451a3438847ff989f32eae11e97), [adc\_sequence](structadc__sequence.md#a233e8b20b57bb2fdbebf2c85f076c802)
- own\_addr\_type : [bt\_hci\_cp\_le\_create\_conn](structbt__hci__cp__le__create__conn.md#a63c7f9e89528105e484a60e41eeb8a30), [bt\_hci\_cp\_le\_ext\_create\_conn](structbt__hci__cp__le__ext__create__conn.md#a12a99044f54e3d5dae30a64392444cbf), [bt\_hci\_cp\_le\_ext\_create\_conn\_v2](structbt__hci__cp__le__ext__create__conn__v2.md#a05fd0089a0fd43f98042835231407a60), [bt\_hci\_cp\_le\_set\_adv\_param](structbt__hci__cp__le__set__adv__param.md#ad8c74cac74254354b314f07df7df1bf0), [bt\_hci\_cp\_le\_set\_ext\_adv\_param](structbt__hci__cp__le__set__ext__adv__param.md#a3594f7337ccd739f59ac7845757de0e8), [bt\_hci\_cp\_le\_set\_ext\_adv\_param\_v2](structbt__hci__cp__le__set__ext__adv__param__v2.md#a554f89f00700bc3ea4996b0a971fedbf), [bt\_hci\_cp\_le\_set\_ext\_scan\_param](structbt__hci__cp__le__set__ext__scan__param.md#a3418aa8dbdb8062ee452f5756eb9f30c), [bt\_hci\_cp\_mesh\_advertise](structbt__hci__cp__mesh__advertise.md#a6b6248069fa1e7eaf6825c52e38c3e78), [bt\_hci\_cp\_mesh\_advertise\_timed](structbt__hci__cp__mesh__advertise__timed.md#ae395b4a53ff9e7af8885b9583562022a)
- owner : [k\_mutex](structk__mutex.md#af910bb07dc99e50078de26fccca468e4), [net\_socket\_service\_desc](structnet__socket__service__desc.md#a08da5714fafa3f678771ea3d5204971a), [udc\_buf\_info](structudc__buf__info.md#a33e927f23d227a4974915c65927284ec)
- owner\_index : [tisci\_msg\_fwl\_owner](structtisci__msg__fwl__owner.md#a2010d9ee65f9a94e5477a0fc1f21774e)
- owner\_orig\_prio : [k\_mutex](structk__mutex.md#ab0d16fac9f8af960a501ffd93ec08c80)
- owner\_permission\_bits : [tisci\_msg\_fwl\_owner](structtisci__msg__fwl__owner.md#a31ec3f0e90fdb8cea887d67004b066a7)
- owner\_privid : [tisci\_msg\_fwl\_owner](structtisci__msg__fwl__owner.md#a5e5e33a9a2f7c04022ce51fa1dcb8eef)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.2.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
